# langgraph-agent-studies

./: .gitignore  README.md  pyproject.toml
docs/: langgraph_basics.md  multiagent_patterns.md
docs/superpowers/plans/: 2026-04-20-langgraph-agent-studies.md
examples/: run_chat.py
src/agent_studies/: agent.py  memory.py  tools.py
tests/: test_agent.py  test_tools.py
